[package]
name = "wfp"
version = "0.0.3"
edition = "2024"
description = "A Rust library for the Windows Filtering Platform (WFP) API"
license = "MIT OR Apache-2.0"
repository = "https://github.com/dlon/wfp-rs"
documentation = "https://docs.rs/wfp"
keywords = ["windows", "firewall", "network", "security"]
categories = ["os::windows-apis", "network-programming"]

[features]
default = []
wfp-integration-tests = []

[dependencies]
log = "0.4.27"
windows-sys = { version = "0.60.2", features = ["Win32", "Win32_NetworkManagement", "Win32_NetworkManagement_WindowsFilteringPlatform", "Win32_Security", "Win32_System_Rpc"] }

[package.metadata.docs.rs]
default-target = "x86_64-pc-windows-msvc"
targets = []
rustdoc-args = ["--cfg", "docsrs"]
